// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearGenomeView genome view component renders one track, no blocks 1`] = `
<div
  className="LinearGenomeView"
  style={
    Object {
      "display": "grid",
      "gridTemplateColumns": "[controls] 100px [blocks] auto",
      "gridTemplateRows": "[scale-bar] auto [track-foo] 20px [resize-foo] 3px",
      "height": "45px",
      "width": "800px",
    }
  }
>
  <div
    className="controls view-controls"
    style={
      Object {
        "gridRow": "scale-bar",
      }
    }
  >
    <button
      onClick={[Function]}
      type="button"
    >
      select tracks
    </button>
  </div>
  <div
    className="ScaleBar"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "scale-bar",
        "height": "22px",
        "width": "700px",
      }
    }
  />
  <div
    className="controls track-controls"
    style={
      Object {
        "gridColumn": "controls",
        "gridRow": "track-foo",
      }
    }
  >
    foo
  </div>
  <div
    className="TrackRenderingContainer"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "track-foo",
        "width": "700px",
      }
    }
  >
    <div
      className="TrackRenderingNotImplemented"
    >
      Rendering not implemented for 
      tester
       tracks
    </div>
  </div>
  <div
    className="drag-handle drag-handle-horizontal"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "span 2",
        "gridRow": "resize-foo",
      }
    }
  />
</div>
`;

exports[`LinearGenomeView genome view component renders two tracks, two regions 1`] = `
<div
  className="LinearGenomeView"
  style={
    Object {
      "display": "grid",
      "gridTemplateColumns": "[controls] 100px [blocks] auto",
      "gridTemplateRows": "[scale-bar] auto [track-foo] 20px [resize-foo] 3px [track-bar] 20px [resize-bar] 3px",
      "height": "68px",
      "width": "800px",
    }
  }
>
  <div
    className="controls view-controls"
    style={
      Object {
        "gridRow": "scale-bar",
      }
    }
  >
    <button
      onClick={[Function]}
      type="button"
    >
      select tracks
    </button>
  </div>
  <div
    className="ScaleBar"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "scale-bar",
        "height": "22px",
        "width": "700px",
      }
    }
  >
    <div
      className="block"
      style={
        Object {
          "left": "0px",
          "width": "100px",
        }
      }
    >
      volvox:ctgA:1-100
    </div>
  </div>
  <div
    className="controls track-controls"
    style={
      Object {
        "gridColumn": "controls",
        "gridRow": "track-foo",
      }
    }
  >
    foo
  </div>
  <div
    className="TrackRenderingContainer"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "track-foo",
        "width": "700px",
      }
    }
  >
    <div
      className="TrackRenderingNotImplemented"
    >
      Rendering not implemented for 
      tester
       tracks
    </div>
  </div>
  <div
    className="drag-handle drag-handle-horizontal"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "span 2",
        "gridRow": "resize-foo",
      }
    }
  />
  <div
    className="controls track-controls"
    style={
      Object {
        "gridColumn": "controls",
        "gridRow": "track-bar",
      }
    }
  >
    bar
  </div>
  <div
    className="TrackRenderingContainer"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "track-bar",
        "width": "700px",
      }
    }
  >
    <div
      className="TrackRenderingNotImplemented"
    >
      Rendering not implemented for 
      tester
       tracks
    </div>
  </div>
  <div
    className="drag-handle drag-handle-horizontal"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "span 2",
        "gridRow": "resize-bar",
      }
    }
  />
</div>
`;

exports[`LinearGenomeView genome view component renders with an empty model 1`] = `
<div
  className="LinearGenomeView"
  style={
    Object {
      "display": "grid",
      "gridTemplateColumns": "[controls] 100px [blocks] auto",
      "gridTemplateRows": "[scale-bar] auto ",
      "height": "22px",
      "width": "800px",
    }
  }
>
  <div
    className="controls view-controls"
    style={
      Object {
        "gridRow": "scale-bar",
      }
    }
  >
    <button
      onClick={[Function]}
      type="button"
    >
      select tracks
    </button>
  </div>
  <div
    className="ScaleBar"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "scale-bar",
        "height": "22px",
        "width": "700px",
      }
    }
  />
</div>
`;
